k8s/cart-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-api-service
  namespace: backend
spec:
  selector:
    matchLabels:
      app: cart-api-service
  replicas: 2
  template:
    metadata:
      labels:
        app: cart-api-service
    spec:
      containers:
        - name: cart-api-service
          image: localhost:5001/cart-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8304
---
apiVersion: v1
kind: Service
metadata:
  name: cart-api-service
  namespace: backend
spec:
  selector:
    app: cart-api-service
  ports:
    - name: http
      port: 8304
      targetPort: 8304
      nodePort: 30020
  type: NodePort
