k8s/products-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api-service
spec:
  selector:
    matchLabels:
      app: products-api-service
  replicas: 2
  template:
    metadata:
      labels:
        app: products-api-service
    spec:
      containers:
        - name: products-api-service
          image: localhost:5001/products-api:test
          imagePullPolicy: Always
          ports:
            - containerPort: 8300
---
apiVersion: v1
kind: Service
metadata:
  name: products-api-service
spec:
  selector:
    app: products-api-service
  ports:
    - name: http
      port: 8300
      targetPort: 8300
      nodePort: 30000
  type: NodePort
