k8s/microservices-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: backend.example.com
    http:
      paths:
      - path: /carts
        pathType: Prefix
        backend:
          service:
            name: cart-api-service
            port:
              number: 8304
      - path: /customers
        pathType: Prefix
        backend:
          service:
            name: customers-api-service
            port:
              number: 8301
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: products-api-service
            port:
              number: 8300
